@@ -1,0 +1,15 @@
+# -- DO NOT EDIT THIS FILE --
+# This file is -not- to be edited by hand.  It is simply defaults.
+# Actual configuration should be done in config.xml in the root directory.
+# -- DO NOT EDIT THIS FILE --
+
+spooldir = ".."
+pid = "../PyICQt.pid"
+mainServer = "127.0.0.1"
+port = "5347"
+secret = "secret"
+lang = "en"
+sessionGreeting = False
+crossChat = False
+debugOn = False
+debugLog = ""
